--- a/configs/serverside_achievement/test.cfg
+++ b/configs/serverside_achievement/test.cfg
@@ -17,4 +17,22 @@
             "reward_description"         "나중에 저희가 일을 마쳤을 때, 좋은 것을 드린다고 약속하죠!!" //  도전과제 해금 보상 한국어 설명
         }
     }
+
+    "first_kill"
+    {
+        "name"                           "First Kill!" //  도전과제의 이름
+        "description"   			     "TEST" //  도전과제의 조건 설명
+        "reward_description"   		     "TEST" //  도전과제 해금 보상 설명
+        "process_max_meter"			     "1" // 도전과제 진행도 최대 진행도
+        "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
+        "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
+        "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+
+        "ko"
+        {
+            "name"		                 "첫번째 처치!" //  도전과제의 한국어 이름
+            "description"                "테스트" //  도전과제의 한국어 조건 설명
+            "reward_description"         "테스트" //  도전과제 해금 보상 한국어 설명
+        }
+    }
 }
