스코어 추가.

--- a/configs/serverside_achievement/test.cfg
+++ b/configs/serverside_achievement/test.cfg
@@ -9,6 +9,7 @@
         "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
         "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
         "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+        "score"                          "3"
 
         "ko"
         {
@@ -27,6 +28,7 @@
         "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
         "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
         "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+        "score"                          "5"
 
         "ko"
         {
@@ -45,6 +47,7 @@
         "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
         "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
         "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+        "score"                          "7"
 
         "ko"
         {
@@ -63,6 +66,7 @@
         "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
         "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
         "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+        "score"                          "10"
 
         "ko"
         {
@@ -71,4 +75,9 @@
             "reward_description"         "테스트" //  도전과제 해금 보상 한국어 설명
         }
     }
+
+///    "temporary_test" // 이건.. 임시 도전과제 테스트!
+///    {
+///
+///    }
 }
