--- a/configs/serverside_achievement/test.cfg
+++ b/configs/serverside_achievement/test.cfg
@@ -76,6 +76,27 @@
         }
     }
 
+    "event_test"
+    {
+        "name"                           "Just Event" //  도전과제의 이름
+        "description"   			     "First connected on server." //  도전과제의 조건 설명
+        "reward_description"   		     "TEST" //  도전과제 해금 보상 설명
+        "process_max_meter"			     "1" // 도전과제 진행도 최대 진행도
+        "only_set_by_plugin"		     "0" // 이 항목이 1일 경우, 무조건 플러그인에서 클리어 확인을 받아야 합니다.
+        "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
+        "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+        "score"                          "10"
+
+        "event_end_datetime"            "9999-12-31 23:59:59"
+
+        "ko"
+        {
+            "name"		                 "아무튼 이벤트임" //  도전과제의 한국어 이름
+            "description"                "기간 내에 서버에서 최초 접속" //  도전과제의 한국어 조건 설명
+            "reward_description"         "테스트" //  도전과제 해금 보상 한국어 설명
+        }
+    }
+
 ///    "temporary_test" // 이건.. 임시 도전과제 테스트!
 ///    {
 ///
