경로 미스요

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_deploy:
     - mv data/serverside_achievement serverside_achievement/addons/sourcemod/data/serverside_achievement
 
     - mv scripting/serverside_achievement.sp serverside_achievement/addons/sourcemod/scripting/serverside_achievement.sp
-    - mv scripting/compiled serverside_achievement/addons/sourcemod/plugins
+    - mv scripting/compiled/* serverside_achievement/addons/sourcemod/plugins/*
 
     - mv translations/serverside_achievement.txt serverside_achievement/addons/sourcemod/translations/
     - zip -rq serverside_achievement serverside_achievement
