Revert "Update .travis.yml"
This reverts commit d17df869bf55b4dd5f5745bef337186c059ed8a5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
 # Releases
 before_deploy:
     - cd ../
-    - mkdir serverside_achievement serverside_achievement/addons serverside_achievement/addons/sourcemod serverside_achievement/addons/sourcemod/configs serverside_achievement/addons/sourcemod/configs/serverside_achievement serverside_achievement/addons/sourcemod/data serverside_achievement/addons/sourcemod/data/serverside_achievement serverside_achievement/addons/sourcemod/scripting serverside_achievement/addons/sourcemod/scripting/serverside_achievement serverside_achievement/addons/sourcemod/scripting/sa_subplugins serverside_achievement/addons/sourcemod/scripting/include serverside_achievement/addons/sourcemod/plugins serverside_achievement/addons/sourcemod/plugins/sa_subplugins serverside_achievement/addons/sourcemod/translations
+    - mkdir serverside_achievement serverside_achievement/addons serverside_achievement/addons/sourcemod serverside_achievement/addons/sourcemod/configs serverside_achievement/addons/sourcemod/configs/serverside_achievement serverside_achievement/addons/sourcemod/data serverside_achievement/addons/sourcemod/data/serverside_achievement serverside_achievement/addons/sourcemod/scripting serverside_achievement/addons/sourcemod/scripting/serverside_achievement serverside_achievement/addons/sourcemod/scripting/sa_subplugins serverside_achievement/addons/sourcemod/scripting/include serverside_achievement/addons/sourcemod/plugins serverside_achievement/addons/sourcemod/translations
     - mv configs/serverside_achievement serverside_achievement/addons/sourcemod/configs/serverside_achievement
     - mv data/serverside_achievement serverside_achievement/addons/sourcemod/data/serverside_achievement
 
