--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ before_deploy:
     - mv configs/serverside_achievement serverside_achievement/addons/sourcemod/configs/serverside_achievement
     - mv data/serverside_achievement serverside_achievement/addons/sourcemod/data/serverside_achievement
 
-    - mv scripting/serverside_achievement.sp serverside_achievement/addons/sourcemod/scripting/serverside_achievement.sp
-    - mv scripting/compiled/serverside_achievement.smx serverside_achievement/addons/sourcemod/plugins/serverside_achievement.smx
-    - mv scripting/compiled/sa_subplugins serverside_achievement/addons/sourcemod/plugins/sa_subplugins
+    - mv scripting/serverside_achievement.sp serverside_achievement/addons/sourcemod/scripting/
+    - mv scripting/sa_subplugins serverside_achievement/addons/sourcemod/scripting/sa_subplugins
+    - mv scripting/compiled ff2_boss_selection/addons/sourcemod/plugins
 
     - mv translations/serverside_achievement.txt serverside_achievement/addons/sourcemod/translations/
     - zip -rq serverside_achievement serverside_achievement
