기본 도전과제 3개 추가

--- a/addons/sourcemod/configs/serverside_achievement/general.cfg
+++ b/addons/sourcemod/configs/serverside_achievement/general.cfg
@@ -179,4 +179,67 @@
             "reward_description" 	"" //  도전과제 해금 보상 한국어 설명
         }
     }
+
+    "heal_master"
+    {
+        "name"					"Heal Master"
+        "description"			"Heal friendly 6 minutes."
+        "reward_description"   	""
+        "process_max_meter"		"360"
+        "only_set_by_plugin"    "0"
+        "score"				"3"
+
+        "hidden"                         "0"
+        "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
+        "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+
+        "ko"
+        {
+            "name"					"힐 마스터" //  도전과제의 한국어 이름
+            "description"   		"6분동안 아군 치유하기" //  도전과제의 한국어 조건 설명
+            "reward_description" 	"" //  도전과제 해금 보상 한국어 설명
+        }
+    }
+
+    "spy_near"
+    {
+        "name"					"Birds hear by day and rats..."
+        "description"			"as Spy, Get near with enemy 30 seconds."
+        "reward_description"   	""
+        "process_max_meter"		"1"
+        "only_set_by_plugin"    "1"
+        "score"				"3"
+
+        "hidden"                         "0"
+        "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
+        "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+
+        "ko"
+        {
+            "name"					"낮말은 새가 듣고 밤말은.." //  도전과제의 한국어 이름
+            "description"   		"스파이로 적 근처에 30초 동안 머무르기" //  도전과제의 한국어 조건 설명
+            "reward_description" 	"" //  도전과제 해금 보상 한국어 설명
+        }
+    }
+
+    "runaway_train"
+    {
+        "name"					"Runaway Train"
+        "description"			"Earn 600 damage the enemy using Shield Rush"
+        "reward_description"   	""
+        "process_max_meter"		"600"
+        "only_set_by_plugin"    "0"
+        "score"				"5"
+
+        "hidden"                         "0"
+        "hidden_description"		     "0" // 이 항목이 1일 경우, 조건이 보이지 않습니다. (번역 지원하는 분들은 이 Key가 활성화 된 곳을 누설 금지.)
+        "hidden_reward_description"	     "0" // 이 항목이 1일 경우,
+
+        "ko"
+        {
+            "name"					"폭주기관차" //  도전과제의 한국어 이름
+            "description"   		"방패 돌진으로 누적 600 피해 입히기" //  도전과제의 한국어 조건 설명
+            "reward_description" 	"" //  도전과제 해금 보상 한국어 설명
+        }
+    }
 }
